Fix for the user menu spacing. :)

--- a/static/styles/afterdark/style.css
+++ b/static/styles/afterdark/style.css
@@ -255,6 +255,10 @@ span.infinity {
     display:inline;
 }
 
+#header_bottom li > ul > li {
+	margin: 0px !important;
+}
+
 table.userinfo_stats {
     margin-top: 10px;
 }
